--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -6,5 +6,7 @@
   color: #212121;
   font-size: 16px;
   line-height: 1;
+  font-weight: 400;
   opacity: 70%;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
 }
