--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -50,6 +50,9 @@
   gap: 8px;
   color: #212121;
   opacity: 70%;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1;
 }
 
 .profile__add-button {
@@ -65,4 +68,7 @@
   color: #fcf5e5;
   border: none;
   cursor: pointer;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1;
 }
