--- a/blocks/card.css
+++ b/blocks/card.css
@@ -6,7 +6,7 @@
 
 .card__image {
   height: 413px;
-  width: 413px;
+  width: 100%;
   object-fit: cover;
   display: block;
   border-radius: 8px;
@@ -37,4 +37,31 @@
   border: none;
   opacity: 40%;
   cursor: pointer;
+}
+
+.card__like-button:hover {
+  opacity: 1;
+}
+
+@media screen and (max-width: 630px) {
+  .card {
+    width: 288px;
+    margin: auto;
+  }
+
+  .card__image {
+    height: 288px;
+  }
+
+  .card__title {
+    font-size: 16px;
+    line-height: 1;
+    height: 18px;
+    max-width: 250px;
+  }
+
+  .card__like-button {
+    width: 20px;
+    height: 18px;
+  }
 }
