--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -9,11 +9,15 @@
 .profile__avatar {
   margin-right: 20px;
   border-radius: 8px;
+  width: 190px;
+  height: 190px;
+  object-fit: cover;
 }
 
 .profile__column {
   display: flex;
   flex-direction: column;
+  max-width: 420px;
 }
 
 .profile__name {
@@ -21,7 +25,8 @@
   font-size: 32px;
   line-height: 1;
   font-weight: 500;
-  text-overflow: ellipses;
+  max-width: 420px;
+  text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -34,11 +39,16 @@
   font-size: 16px;
   line-height: 1;
   font-weight: 500;
+  max-width: 420px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .profile__edit-button {
   margin-top: auto;
-  height: 16px;
   width: fit-content;
   padding: 0;
   border: none;
@@ -49,10 +59,14 @@
   align-items: center;
   gap: 8px;
   color: #212121;
-  opacity: 70%;
+  opacity: 0.7;
   font-size: 16px;
   font-weight: 500;
   line-height: 1;
+}
+
+.profile__edit-button:hover {
+  opacity: 1;
 }
 
 .profile__add-button {
@@ -71,4 +85,49 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 1;
+}
+
+.profile__add-button:hover {
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 630px) {
+  .profile {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-top: 20px;
+  }
+
+  .profile__avatar {
+    margin-right: 0;
+    width: 80px;
+    height: 80px;
+    margin: 0 0 12px;
+    object-fit: cover;
+  }
+
+  .profile__column {
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+
+  .profile__name {
+    font-size: 20px;
+    margin: 0 0 6px;
+    max-width: 288px;
+  }
+
+  .profile__description {
+    margin: 0 0 32px;
+    max-width: 288px;
+  }
+
+  .profile__add-button {
+    width: 100%;
+    margin: 0;
+    height: 52px;
+  }
 }
