--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -29,7 +29,7 @@
   border-radius: 8px;
 }
 
-.modal__close-btn {
+.modal__close-button {
   position: absolute;
   top: 32px;
   right: 50px;
@@ -41,7 +41,7 @@
   padding: 0;
 }
 
-.modal__close-btn:hover {
+.modal__close-button:hover {
   opacity: 1;
   cursor: pointer;
 }
@@ -75,13 +75,14 @@
 
 .modal__input:hover {
   opacity: 1;
+  cursor: pointer;
 }
 
 .modal__input:not(:placeholder-shown) {
   color: #212121;
 }
 
-.modal__submit-btn {
+.modal__submit-button {
   width: 156px;
   padding: 18px 0;
   background: #212121;
@@ -91,6 +92,10 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 1;
+}
+
+.modal__submit-button {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 630px) {
